# ChangeLog for dev-libs/libgcrypt
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgcrypt/ChangeLog,v 1.154 2012/04/26 16:02:38 aballier Exp $

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> libgcrypt-1.5.0-r2.ebuild:
  keyword ~amd64-fbsd

*libgcrypt-1.5.0-r2 (18 Feb 2012)

  18 Feb 2012; Ulrich Müller <ulm@gentoo.org> +libgcrypt-1.5.0-r2.ebuild:
  Re-add support for the IDEA cipher, bug 159870.

*libgcrypt-1.5.0-r1 (22 Sep 2011)

  22 Sep 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  +libgcrypt-1.5.0-r1.ebuild, +files/libgcrypt-multilib-syspath.patch:
  Revbump: also drop -L flags from libgcrypt-config as done for libgpg-error;
  avoid forcing PIC code for static libraries (if they are even enabled); use
  EAPI=4 features; remove .la files if the static libraries are not installed.

  22 Sep 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  -libgcrypt-1.5.0_beta1-r1.ebuild, -libgcrypt-1.5.0_beta1-r2.ebuild,
  -files/libgcrypt-1.5.0_beta1-ctr.patch:
  Remove betas, so that we can remove the (too big) file in FILESDIR.

  22 Sep 2011; Diego E. Pettenò <flameeyes@gentoo.org> libgcrypt-1.5.0.ebuild,
  +files/libgcrypt-1.5.0-uscore.patch:
  Use libtool's macro to identify whether to use underscores in names or not.
  Closes bug #383865.

*libgcrypt-1.5.0 (01 Jul 2011)

  01 Jul 2011; Markos Chandras <hwoarang@gentoo.org> +libgcrypt-1.5.0.ebuild:
  Version bump. Requested by Arfrever

*libgcrypt-1.5.0_beta1-r2 (01 May 2011)

  01 May 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +libgcrypt-1.5.0_beta1-r2.ebuild, +files/libgcrypt-1.5.0_beta1-ctr.patch:
  Backport changes in CTR mode (bug #356325).

*libgcrypt-1.5.0_beta1-r1 (06 Apr 2011)
*libgcrypt-1.4.6-r1 (06 Apr 2011)

  06 Apr 2011; Dane Smith <c1pher@gentoo.org> +libgcrypt-1.4.6-r1.ebuild,
  -libgcrypt-1.5.0_beta1.ebuild, +libgcrypt-1.5.0_beta1-r1.ebuild:
  Revbump for both 1.4.6 and 1.5.0_ beta1. Disable flag munging wrt 